# sc4-advanced-plop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: EmbedFile.cmake
docs/: USAGE.md
src/app/: CMakeLists.txt  DbpfIndexService.cpp  DbpfIndexService.hpp  ExemplarParser.cpp  ExemplarParser.hpp  MeshBuilder.cpp  PluginScanner.cpp  PluginScanner.hpp  PropertyMapper.cpp  PropertyMapper.hpp  ThumbnailRenderer.cpp  Utils.cpp  Utils.hpp  main.cpp
src/app/services/: DbpfIndexService.cpp  DbpfIndexService.hpp  ExemplarParser.cpp  PropertyMapper.cpp  PropertyMapper.hpp  ScanService.cpp  ScanService.hpp  ThumbnailRenderer.cpp  ThumbnailRenderer.hpp
src/dll/: BuildingLotPanelTab.cpp  BuildingLotPanelTab.hpp  BuildingsPanelTab.cpp  BuildingsPanelTab.hpp  CMakeLists.txt  Constants.hpp  FamiliesPanelTab.cpp  FamiliesPanelTab.hpp  FavoritesRepository.cpp  FloraCollectionsPanelTab.cpp  FloraCollectionsPanelTab.hpp  FloraPanelTab.cpp  FloraPanelTab.hpp  FloraRepository.cpp  FloraRepository.hpp  LotFilterHelper.cpp  LotFilterHelper.hpp  LotPlopPanel.cpp  LotPlopPanel.hpp  LotRepository.cpp  LotsPanelTab.cpp  LotsPanelTab.hpp  PanelTab.hpp  PropFilterHelper.cpp  PropFilterHelper.hpp  PropLinePlacer.cpp  PropLinePlacer.hpp  PropPaintOverlay.cpp  PropPaintOverlay.hpp  PropPaintPlacement.hpp  PropPaintStatusPanel.cpp  PropPaintStatusPanel.hpp  PropPainterInputControl.cpp  PropPainterInputControl.hpp  PropPanelTab.cpp  PropPanelTab.hpp  PropPolygonPlacer.cpp  PropPolygonPlacer.hpp  PropRepository.cpp  PropRepository.hpp  (+10 more)
src/dll/common/: BasePainterInputControl.cpp  BasePainterInputControl.hpp  PanelTab.hpp
src/dll/flora/: FloraCollectionsPanelTab.cpp  FloraPainterInputControl.cpp  FloraPainterInputControl.hpp  FloraPanelTab.cpp  FloraStripperInputControl.cpp
src/dll/lots/: BuildingsPanelTab.cpp
src/dll/paint/: PaintOverlay.cpp  PaintOverlay.hpp
src/dll/props/: FamiliesPanelTab.cpp  PropPanelTab.cpp
src/dll/utils/: Settings.cpp  Settings.h
src/gui/: AppState.hpp  Application.cpp  Application.hpp  CMakeLists.txt  ImGuiLogSink.hpp  main.cpp
src/gui/panels/: ConfigPanel.cpp  ConfigPanel.hpp  LogPanel.cpp  LogPanel.hpp  ProgressPanel.cpp  ProgressPanel.hpp
src/shared/: CMakeLists.txt  entities.hpp  index.hpp  properties.hpp
src/shared/tests/: test_entities.cpp
tools/: CMakeLists.txt  convert_properties.cpp
